Attempting another fix for jitter on Firefox mobile

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -147,6 +147,7 @@
   background-color: #252e42;
   // padding: 10px 0;
   transform: translateZ(0);
+  -webkit-transform: translateZ(0);
 }
 
 .mobile-home,
@@ -192,7 +193,8 @@
   }
 }
 
-@media not all and (hover:none) {
+@media (hover:none) {
+// @media not all and (hover:none) {
   .nav-search-bar,
   .hover-btn {
     display: none;
